# LabelChecker_Pipeline

./: .gitignore  .zenodo.json  LICENSE  README.md  analyze_model.ipynb  classification.py  image.py  normalizer.py  preprocessing.py  preprocessingIFCB.py  pyproject.toml  requirements.txt  tiff_to_png_converter.py  train_model.ipynb
src/: logging.py
src/enums/: Instruments.py  LabelChecker.py
src/error/: handler.py
src/instruments/: list_data.py  read_data.py
src/instruments/flowcam/: read_data.py
src/instruments/flowcam/normalizers/: normalizer.py
src/instruments/flowcam/structure/: flowcam_data_structure.py
src/normalizers/: LabelChecker.py
src/schemas/: LabelChecker.py  LabelCheckerColumns.py  ModelConfig.py  ModelInfo.py
src/services/: ProcessData.py  README.md  config.py
src/services/classification/ObjectClassification/: service.py
src/services/classification/ObjectClassification/utils/: Dataloader.py
src/services/preprocessing/AirBubbleDetection/: service.py
src/services/preprocessing/AirBubbleDetection/utils/: Dataloader.py
src/services/preprocessing/BiovolAndSurfaceAreaCalculator/: service.py
src/services/preprocessing/BiovolAndSurfaceAreaCalculator/utils/: biovol_cal.py
src/services/preprocessing/BlurDetection/: config.py  service.py
src/services/preprocessing/DetritusDetection/: service.py
src/services/preprocessing/DuplicateDetection/: service.py
src/services/preprocessing/SizeThreshold/: service.py
src/utils/: ModelLoader.py  ServiceSettings.py  dataframe.py  image.py
(+4 files in other folders)
