[tool.poetry]
name = "labelchecker_data_pipeline"
version = "0.1.0"
description = "Data processing pipeline for LabelChecker"
authors = ["Tim Walles <tim.walles@igb-berlin.de>"]
license = "MIT"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
joblib = "1.4.2"
opencv-python-headless = "4.9.0.80"
pandas = "2.2.2"
parallel-pandas = "0.6.4"
pyarrow = "15.0.1"
plotly = "5.23.0"
pydantic = "2.9.2"
nbformat = "5.10.4"
pydot = "3.0.1"
matplotlib = "3.10.0"
requests = "2.32.3"
rich = "13.7.1"
scikit-learn = "1.5.2"
tensorflow = "2.17.0"
tensorflow-io = "0.37.1"
typer = "0.12.3"
typing-extensions = "4.12.2"
ipykernel = "6.29.5"
skops = "0.10.0"
pandas-stubs = "^2.2.3.241126"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"